--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -41,3 +41,15 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #fffaf5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #391f00;
+  }
