--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,6 +63,7 @@ body {
   font-size: 20px;
   color: #ff0000;
   font-family: var(--fontMons);
+  text-shadow: 0px 5px 15px;
 }
 
 .modal_content button {
