--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.7);
   transition: opacity 0.3s ease;
   opacity: 0;
@@ -24,7 +24,7 @@ body {
   border: 1px solid #888;
   width: 50%;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
-  margin: 60px auto;
+  margin: 100px auto;
   transition: transform 0.3s ease;
   transform: translateY(-50px);
 }
@@ -50,6 +50,10 @@ body {
   width: 100%;
   border-radius: 5px;
   padding: 18px 52px;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: var(--fontMons);
+  color: var(--mainColorText);
 }
 
 .modal_content input:focus {
@@ -598,9 +602,8 @@ body {
   font-style: normal;
   font-weight: 500;
   line-height: 196.187%;
-text-decoration: none;
-text-align: center;
-
+  text-decoration: none;
+  text-align: center;
 }
 
 .footer_contact_div a:hover {
@@ -648,10 +651,9 @@ text-align: center;
 /* Responsive Design Codes */
 
 @media only screen and (max-width: 1200px) and (min-width: 901px) {
-  /* .main {
-    width: 100%;
-    margin: 0px auto;
-  } */
+  .modal_content {
+    width: 70%;
+  }
 
   .navbar {
     width: 100%;
@@ -720,6 +722,22 @@ text-align: center;
 }
 
 @media only screen and (max-width: 900px) and (min-width: 601px) {
+  .modal_content {
+    width: 70%;
+  }
+
+  .header_about_div {
+    width: 50%;
+  }
+
+  .header_about_div h1 {
+    font-size: 26px !important; 
+  }
+
+  .header_books_div {
+    width: 50%;
+  }
+
   .navbar {
     width: 100%;
     display: flex;
@@ -886,6 +904,7 @@ text-align: center;
     width: 100%;
     margin-bottom: 40px;
   }
+
   .header_books_div {
     width: 90%;
   }
@@ -991,7 +1010,7 @@ text-align: center;
   }
 
   .modal_inner_div p {
-    font-size: 28px;
+    font-size: 30px;
   }
 
   .modal_content input {
