--- a/src/css/joinUs.css
+++ b/src/css/joinUs.css
@@ -131,6 +131,11 @@
   gap: 18px;
 }
 
+.responsive_modal_ul a {
+  text-decoration: none;
+  color: #fff;
+}
+
 .responsive_modal_ul li:hover {
   color: #cecece;
   transition: all 0.3s;
