--- a/src/css/AdminPanel.css
+++ b/src/css/AdminPanel.css
@@ -65,6 +65,8 @@
   height: 74.54px;
   margin-bottom: 34px;
   border: 1px solid #cecece;
+  font-size: 20px;
+  padding-left: 54px;
 }
 
 #Login .login-container .form input::placeholder {
@@ -73,7 +75,6 @@
   font-weight: 400;
   line-height: 25px;
   text-align: left;
-  padding-left: 54px;
 }
 
 #Login .login-container .form button {
@@ -508,6 +509,7 @@ th {
   line-height: 16px;
   letter-spacing: 0.01em;
   text-align: center;
+  overflow: auto;
 }
 
 #Second-panel .table-content table th {
@@ -548,6 +550,8 @@ th {
   #Login .login-container .form input {
     height: 40.84px;
     margin-bottom: 21.99px;
+    padding-left: 12px;
+    font-size: 16px;
   }
 
   #Login .login-container .form input::placeholder {
@@ -616,6 +620,8 @@ th {
     width: 100%;
     padding: 0 0 289px;
   }
+
+
 
   .admin-container .book-form-container,
   .admin-container .about-store-container {
