--- a/src/css/about.css
+++ b/src/css/about.css
@@ -5,7 +5,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 100px 58px 0px 150px;
+  padding: 100px 10px 0px;
+  width: 85%;
+  margin: 0px auto;
   gap: 8px;
 }
 main {
@@ -36,20 +38,16 @@ main {
     width: 50%;
   }
 }
-@media screen and (max-width: 1201px) {
+@media screen and (max-width: 1200px) {
   .section-1 {
-    padding: 100px 28px 0px 120px;
+    width: 90%;
   }
 }
 
-@media screen and (max-width: 1048px) {
-  .section-1 {
-    padding: 100px 18px 0px 100px;
-  }
-}
 @media screen and (max-width: 994px) {
   .section-1 {
-    padding: 100px 18px 0px 80px;
+    width: 85%;
+    padding: 20px 10px 0px;
     flex-direction: column-reverse;
     text-align: center;
     gap: 60px;
@@ -60,11 +58,11 @@ main {
 }
 @media screen and (max-width: 769px) {
   .section-1 {
-    padding: 100px 18px 0px 40px;
+    width: 89%;
   }
 }
 @media screen and (max-width: 576px) {
   .section-1 {
-    padding: 100px 8px 0px 20px;
+    width: 100%;
   }
 }
