fix navbar responsive

--- a/src/css/joinUs.css
+++ b/src/css/joinUs.css
@@ -317,8 +317,9 @@
   .navbar {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding: 30px;
   }
 
   #joinUsIcon {
