--- a/src/css/joinUs.css
+++ b/src/css/joinUs.css
@@ -18,7 +18,7 @@
   background: #fff;
   padding: 20px;
   border: 1px solid #888;
-  width: 50%;
+  width: 675px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
   margin: 100px auto;
   transition: transform 0.3s ease;
@@ -114,7 +114,7 @@
   background: #241400bf;
   color: #fff;
   padding: 20px;
-  width: 50%;
+  width: 100%;
   height: 100%;
   text-align: center;
   position: fixed;
@@ -270,10 +270,6 @@
 /* MODAL VE NAVBAR RESPONSIV */
 
 @media only screen and (max-width: 1200px) and (min-width: 901px) {
-  .modal_content {
-    width: 70%;
-  }
-
   .navbar {
     width: 100%;
     display: flex;
@@ -311,7 +307,7 @@
 
 @media only screen and (max-width: 900px) and (min-width: 601px) {
   .modal_content {
-    width: 70%;
+    width: 75%;
   }
 
   .navbar {
